fixes layout bugs in footer

--- a/assets/_scss/components/_footer.scss
+++ b/assets/_scss/components/_footer.scss
@@ -67,6 +67,9 @@
 
             &.footer__branding {
                 flex: 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
             }
 
             &.footer__contact {
@@ -130,8 +133,14 @@
 
         .socials {
             padding: 0;
+            flex-wrap: wrap;
+
+            @include tablet-break {
+                flex-wrap: nowrap;
+            }
+
             li {
-                flex: 1;
+                flex: 0 1 25%;
 
                 .social::after {
                     @include tablet-break {
